--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "author": "Spruik Technologies",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "javascript-state-machine": "^3.1.0",
     "mqtt": "^4.3.8",
     "seedrandom": "^3.0.5",
