--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,16 +1,18 @@
 name: Publish Docker
 
 on:
+  # Trigger the workflow on push request,
+  # but only for the main branch
   push:
     branches:
       - main
   release:
+    # Only use the types keyword to narrow down the activity types that will trigger your workflow.
     types: [published, created, edited]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -40,3 +42,4 @@ jobs:
         name: schmeckm/it_ot_application
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+
