--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,40 @@
 name: Publish Docker
+
 on:
-  # Trigger the workflow on push request,
-  # but only for the master branch
   push:
     branches:
-      - master
+      - main
   release:
-    # Only use the types keyword to narrow down the activity types that will trigger your workflow.
     types: [published, created, edited]
+
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@master
-    - name: Publish to Registry2
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build and push
+      uses: docker/build-push-action@v3
+      with:
+        context: .
+        push: true
+        tags: schmeckm/it_ot_application:latest
+
+    - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@v5
       with:
         name: schmeckm/it_ot_application
